# Image-Processing-Project

./: .gitignore  PROBLEM  README  TODO  ablation_experiments.txt  futue_abilation  main.py  output_abilation.txt  pyproject.toml  run_priority_ablations.sh  run_secondary_ablations.sh
Paper/: macros.tex  main.tex  preamble.tex  references.bib  supplementary.tex
Paper/rough/: latexmkrc  main.tex
runs/run_20260422_040151/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_041208/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_041803/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_043159/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_043749/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_044717/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_045756/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_050822/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_051250/: config.json  console_output.txt  results_summary.csv
runs/run_20260422_062952/: config.json  console_output.txt  results_summary.csv
src/: __init__.py  data.py  model.py  params.py  plots.py  train.py  utils.py
