[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.0"
dependencies = [
    "datasets==3.6.0",
    "matplotlib>=3.9.4",
    "torch==2.4.0+cu121",
    "torchvision==0.19.0+cu121",
    "typer>=0.23.2",
]

[dependency-groups]
dev = [
    "huggingface-hub>=1.8.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "ruff>=0.15.9",
]

[tool.uv]
index-strategy = "unsafe-best-match"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"

